# MoonBase-Bot-Snapshot-Contract

./: Cargo.toml  README.md  api_doc.md  build.sh  deploy.sh  init.sh
res/: nepbot_snapshot.wasm
src/: lib.rs  utils.rs  view.rs
